[package]
name = "project-362-rfdetr-mlx"
description = "RF-DETR-Nano image-PII detector in MLX via mlx-rs (Apple-Silicon-only)"
version = "0.4.25"
edition = "2021"
license-file = "../../LICENSE.md"
authors = ["louis030195 <hi@louis030195.com>"]
publish = false

[lib]
name = "project_362_rfdetr_mlx"
path = "src/lib.rs"

[dependencies]
image = { version = "0.25", features = ["png", "jpeg"] }
thiserror = "1"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
mlx-rs = { version = "0.25", features = ["safetensors"] }
mlx-sys = "0.2"
# Pin to the version mlx-rs uses internally so the TensorView types match.
safetensors = "0.6"
