[package]
name = "project-362-screen"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
project-362-a11y = { path = "../project-362-a11y" }
serde_json = { workspace = true }
chrono = { workspace = true }

# async
tokio = { workspace = true }

# Image processing
image = { workspace = true }

# OCR
rusty-tesseract = { git = "https://github.com/screenpipe/rusty-tesseract.git", rev = "08346c1de08d122c7121425abc79081c30dbf778" }

anyhow = { workspace = true }

image-compare = "0.4.1"

# Integrations
project-362-connect = { path = "../project-362-connect" }

# Lanuage specification
project-362-core = { path = "../project-362-core" }
project-362-db = { path = "../project-362-db" }

tracing = { workspace = true }
serde = { workspace = true }

once_cell = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
strsim = { workspace = true }
memory-stats = "1.2.0"

serde = { workspace = true }

[package.metadata.osx]
framework = ["Vision", "AppKit"]

[[bench]]
name = "ocr_benchmark"
harness = false

[[bench]]
name = "apple_leak_bench"
harness = false

[[bench]]
name = "frame_comparison_bench"
harness = false

[[bench]]
name = "multi_monitor_bench"
harness = false

# Platform-specific dependencies

# macOS: sck-rs for 12.3+ (ScreenCaptureKit), xcap as fallback for older versions
[target.'cfg(target_os = "macos")'.dependencies]
sck-rs = { git = "https://github.com/screenpipe/sck-rs" , rev = "4a0d05c8a177986b848aac7803670befa886f2a3"}
xcap = { workspace = true }
libc = { workspace = true }
cidre = { git = "https://github.com/yury/cidre.git", rev = "8481f3f0dc7dd39bb5be80d9424bfac0cad3801a", features = ["vn", "cv", "cg", "app"] }
accessibility-sys = { workspace = true }
core-foundation = { workspace = true }
core-graphics = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
xcap = { workspace = true, features = ["wgc"] }
uiautomation = { workspace = true }
windows = { workspace = true, features = [
  "Graphics_Imaging",
  "Globalization",
  "Media_Ocr",
  "Storage",
  "Storage_Streams",
  "Foundation_Collections",
  # Direct WGC integration for wgc_capture.rs (bypasses xcap's persistent video
  # recorder, which CPU-converts every compositor frame — see issue #4840).
  "Graphics_Capture",
  "Graphics_DirectX_Direct3D11",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
  # CPU-time sampling in examples/wgc_cpu_probe.rs (issue #4840 before/after tool).
  "Win32_System_Threading",
] }

[target.'cfg(target_os = "linux")'.dependencies]
xcap = { workspace = true }
libc = { workspace = true }
atspi = { version = "0.25.0", features = ["tokio","proxies-tokio","zbus"] }
zbus = { workspace = true, default-features = false }
atspi-common     = { version = "0.9.0", default-features = false }
atspi-proxies    = { version = "0.9.0", default-features = false }
