[package]
name = "project-362-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
project-362-config = { path = "../project-362-config" }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-sync-persistent"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
serial_test = "3.2.0"
