[package]
name = "project-362-sync"
version = { workspace = true }
authors = { workspace = true }
description = "Generic data-sync primitives: pluggable destinations + body encryption + ticketed upload pipeline."
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Hashing — always on; tiny and used for object-name + manifest sha256.
sha2 = { workspace = true }
hex = { workspace = true }

# Feature-gated: HTTP transport. Required for `HttpPutDirect` + `TicketedPipeline`.
reqwest = { workspace = true, optional = true }
# Used by `HttpPutDirect` to hold the upload body once and clone refcount-
# only across retries (a 50MB batch retried 3× should not allocate 150MB).
bytes = { workspace = true, optional = true }

# Feature-gated: body encryption (ChaCha20-Poly1305 + per-recipient key wrap).
chacha20poly1305 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["http", "encrypt"]
http = ["dep:reqwest", "dep:bytes"]
encrypt = ["dep:chacha20poly1305", "dep:base64", "dep:rand", "dep:zeroize"]
