[package]
name = "project-362-vault"
version.workspace = true
authors.workspace = true
description = "Vault encryption for project-362 data at rest"
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
# Crypto
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# File walking
walkdir = "2"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
