[package]
name = "project-362-sdk"
version = "0.4.3"
edition = "2021"
description = "Project 362 SDK — napi-rs bindings around the project-362-recorder crate"
license = "LicenseRef-Project 362-Enterprise"
publish = false

# The SDK is intentionally not part of the parent project-362 workspace
# (see the root Cargo.toml `workspace.exclude`). Declaring our own
# workspace here keeps cargo from walking up the directory tree, and
# pulls `recorder-core` in as a sibling member so both share a lockfile
# (they wrap the same monorepo crates — single lockfile = one set of
# resolved versions, no duplication).
[workspace]
members = ["recorder-core", "tauri/rust"]
# Examples (tauri-app/src-tauri etc.) are full apps with their own
# tauri-build / signing configs; they keep their own workspace roots.
exclude = ["examples"]

[workspace.dependencies]
# Shared across recorder-core + tauri/rust
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "rt", "sync", "macros", "time", "process"] }
# Used in recorder-core deps + dev-deps
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Used in tauri/rust
base64 = "0.22"
thiserror = "2"
tempfile = "3"

[lib]
crate-type = ["cdylib"]

[dependencies]
# All orchestration lives here. The Tauri plugin
# (`ee/sdk/tauri/rust`) depends on the same crate, so the recorder
# logic isn't duplicated and no Node bridge is needed for native hosts.
project-362-recorder = { path = "recorder-core" }

napi = { version = "2", default-features = false, features = ["napi4", "async"] }
napi-derive = "2"
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
